--- a/index.html
+++ b/index.html
@@ -43,18 +43,18 @@
 
             <a-nft
               type="nft"
-              url="assets/escalera"
+              url="assets/escalera3"
               smooth="true"
               smoothCount="10"
               smoothTolerance=".01"
               smoothThreshold="5"
             >
-              <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-              <a-image
-                    src="assets/butterflies2.gif"
-                    scale="1 1 1"
+                <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
+                <a-image
+                      src="assets/butterflies2.gif"
+                      scale="1 1 1"
 
-                    rotation="-90 0 0"
+                      rotation="-90 0 0"
 
                 ></a-image>
             </a-nft>
