--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
                 <a-image
-                      src="assets/butterflies2.gif"
+                      src="assets/libreria.jpg"
                       scale="1 1 1"
 
                       rotation="-90 0 0"
