cambio de imagen por una caja

--- a/index.html
+++ b/index.html
@@ -50,13 +50,7 @@
               smoothThreshold="5"
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-                <a-image
-                      src="assets/libreria.jpg"
-                      scale="1 1 1"
-
-                      rotation="-90 0 0"
-
-                ></a-image>
+                <a-box position='100 0.5 -180' material='opacity: 0.5; side: double' scale="100 100 100"></a-box>
             </a-nft>
 
             <a-entity camera></a-entity>
