--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
               smoothThreshold="5"
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-                <a-box position='100 0.5 -180' material='opacity: 0.5; side: double' scale="100 100 100"></a-box>
+                <h1>Orale</h1>
+                <a-box position='100 0.5 -180' material='opacity: 0.8; side: double' scale="100 100 100"></a-box>
             </a-nft>
 
             <a-entity camera></a-entity>
