otra vez con butterlies

--- a/index.html
+++ b/index.html
@@ -51,7 +51,13 @@
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
                 <h1>Orale</h1>
-                <a-box position='100 0.5 -180' material='opacity: 0.8; side: double' scale="100 100 100"></a-box>
+                <a-image
+                    src="assets/butterflies2.gif"
+                    scale="1 1 1"
+                    class="clickable"
+                    rotation="-90 0 0"
+                    gesture-handler
+                ></a-image>
             </a-nft>
 
             <a-entity camera></a-entity>
