--- a/index.html
+++ b/index.html
@@ -51,10 +51,7 @@
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
                 <h1>Orale</h1>
-                <a-image
-                    src="assets/butterflies2.gif"
-                    
-                ></a-image>
+                <a-box position='100 0.5 -180' material='opacity: 0.8; side: double' scale="100 100 100"></a-box>
             </a-nft>
 
             <a-entity camera></a-entity>
