--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
 <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-detector.js"></script>
 <script src="https://raw.githack.com/AR-js-org/studio-backend/master/src/modules/marker/tools/gesture-handler.js"></script>
+<script src="https://rawgit.com/mayognaise/aframe-gif-shader/master/dist/aframe-gif-shader.min.js"></script>
 <style>
     .arjs-loader {
         height: 100%;
@@ -40,6 +41,7 @@
             embedded
             gesture-detector
         >
+        <a-entity geometry="primitive:box;" material="shader:gif;src:url(assets/butterflies2.gif);color:green;opacity:.8"></a-entity>
 
             <a-nft
               type="nft"
