--- a/index.html
+++ b/index.html
@@ -41,7 +41,10 @@
             embedded
             gesture-detector
         >
-        <a-entity geometry="primitive:box;" material="shader:gif;src:url('assets/butterflies2.gif');color:green;opacity:.8"></a-entity>
+        <a-assets>
+          <img id="butterflies" src="assets/butterflies2.gif">
+        </a-assets>
+        
 
             <a-nft
               type="nft"
@@ -53,6 +56,7 @@
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
                 <h1>Otra cosa</h1>
+                <a-entity geometry="primitive:box;" material="shader:gif;src:url(#butterflies)"></a-entity>
                 <a-box position='100 0.5 -180' material='opacity: 0.8; side: double' scale="100 100 100"></a-box>
             </a-nft>
 
