--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
             gesture-detector
         >
         <a-assets>
-          <img id="butterflies" src="assets/butterflies2.gif">
+          <a-asset-item
+            id="butterflies"
+            src="assets/butterflies2.gif"
+          ></a-asset-item>
         </a-assets>
         
 
@@ -55,9 +58,9 @@
               smoothThreshold="5"
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-                <h1>Otra cosa</h1>
+                <h1>una mas</h1>
                 <a-entity geometry="primitive:box;" material="shader:gif;src:url(#butterflies)"></a-entity>
-                <a-box position='100 0.5 -180' material='opacity: 0.8; side: double' scale="100 100 100"></a-box>
+                
             </a-nft>
 
             <a-entity camera></a-entity>
