--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
                 <h1>una mas</h1>
-                <a-entity geometry="primitive:box;" material="shader:gif;src:#butterflies"></a-entity>
+                <a-plane src="#butterflies"></a-plane>
                 
             </a-nft>
 
