mas cambios a la imagen

--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
                 <h1>una mas</h1>
-                <a-plane src="#butterflies"></a-plane>
+                <a-image 
+                  src="#butterflies"
+                  scale="1 1 1"
+                  rotation="-90 0 0"
+                ></a-image>
                 
             </a-nft>
 
