--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <a-assets>
           <img
             id="butterflies"
-            src="assets/butterflies2.gif"
+            src="https://jmolguin.github.io/assets/butterflies2.gif"
           ></img>
         </a-assets>
         
@@ -59,11 +59,11 @@
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
                 <h1>una mas</h1>
-                <a-image 
-                  src="#butterflies"
-                  scale="1 1 1"
-                  rotation="-90 0 0"
-                ></a-image>
+                <a-entity 
+                  geometry="primitive:box"
+                  material="shader:gif;src:https://jmolguin.github.io/assets/butterflies2.gif;"
+                  gif="">
+                </a-entity>
                 
             </a-nft>
 
