cambio de material de la entity

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
               smoothThreshold="5"
             >
                 <!-- as a child of the a-nft entity, you can define the content to show. here's a GLTF model entity -->
-                <h1>una mas</h1>
+                <h1>Entity</h1>
+
                 <a-entity 
                   geometry="primitive:box"
-                  material="shader:gif;src:https://jmolguin.github.io/assets/butterflies2.gif;"
+                  material="shader:gif;src:https://jmolguin.github.io/assets/butterflies2.gif;color:green;opacity:.8"
                   gif="">
                 </a-entity>
                 
