cambio de butterflies1

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
             embedded
             gesture-detector
         >
-        <a-assets>
-          <img
-            id="butterflies"
-            src="https://jmolguin.github.io/assets/butterflies2.gif"
-          ></img>
-        </a-assets>
+          <a-assets>
+            <img
+              id="butterflies"
+              src="https://jmolguin.github.io/assets/butterflies1.gif"
+            ></img>
+          </a-assets>
         
 
             <a-nft
@@ -61,9 +61,9 @@
                 <h1>Entity</h1>
 
                 <a-entity 
-                  geometry="primitive:box"
-                  material="shader:gif;src:https://jmolguin.github.io/assets/butterflies2.gif;color:green;opacity:.8"
-                  gif="">
+                geometry="primitive:plane"
+                material="shader:gif;src:url(assets/butterflies1.gif)"
+                gif="">
                 </a-entity>
                 
             </a-nft>
