--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 var msgeEl = document.getElementById("mensaje");
                 var marker = this.el;
                 marker.addEventListener('markerFound', function () {
-                    msgeEl.innerHTML="<h1 align='center'>Encontrado</h1>"
+                    msgeEl.innerHTML="<h1>Encontrado</h1>"
                 }.bind(this));
 
                 marker.addEventListener('markerLost', function() {   
