--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 var msgeEl = document.getElementById("mensaje");
                 var marker = this.el;
                 marker.addEventListener('markerFound', function () {
-                    msgeEl.innerHTML="<h1 style='color:red;background:white'>DETECTADO</h1>"
+                    msgeEl.innerHTML="<h1 align='center' style='color:red;background:white'>DETECTADO</h1>"
                 }.bind(this));
 
                 marker.addEventListener('markerLost', function() {   
@@ -90,12 +90,12 @@
                 ></a-entity>
                 <a-entity
                     id="bowser-model"
-                    scale="40 40 40"
+                    scale="50 50 50"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset-robot"
                     class="clickable"
                     gesture-handler
-                    position="100 200 0"
+                    position="0 0 0"
                     rotation="0 0 -180"
                 ></a-entity>
                 
