--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               manejaeventos
             >
                 <a-entity 
-                    geometry="primitive:cube"
+                    geometry="primitive:box"
                     material="shader:gif;src:url(assets/butterflies1.gif)"
 
                 ></a-entity>
