--- a/index.html
+++ b/index.html
@@ -69,6 +69,10 @@
                 id="butterflies"
                 src="https://jmolguin.github.io/assets/butterflies1.gif"
               ></img>
+              <img
+                id="butterfly-gif"
+                src="https://jmolguin.github.io/assets/butterfly-fly.gif"
+              ></img>
               <a-asset-item
                     id="animated-asset-robot"
                     src="assets/robot.gltf"
@@ -88,7 +92,7 @@
             >
                 <a-entity 
                     geometry="primitive:box"
-                    material="shader:gif;src:url(assets/butterflies1.gif)"
+                    material="shader:gif;src:url(assets/butterfly-fly.gif)"
 
                 ></a-entity>
                
