--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     msgeEl.innerHTML=
                     "<h1 align='center' style='color:red;background:white'>\
                         DETECTADO\
+                        <br>butterfly-fly\
                     </h1>"
                 }.bind(this));
 
@@ -93,7 +94,7 @@
                 <a-entity 
                     geometry="primitive:box"
                     material="shader:gif;src:url(assets/butterfly-fly.gif)"
-
+                    position="60 0 -200"
                 ></a-entity>
                
                 
