--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               manejaeventos
             >
                 <a-entity 
-                    geometry="primitive:box"
+                    geometry="primitive:box; width: 10; height: 10; depth: 1"
                     material="shader:gif;src:url(assets/butterfly-fly.gif)"
                     position="60 0 -200"
                 ></a-entity>
