--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
                     msgeEl.innerHTML=
                     "<h1 align='center' style='color:red;background:white'>\
                         DETECTADO\
-                        <br>butterfly-fly\
                     </h1>"
                 }.bind(this));
 
@@ -95,6 +94,8 @@
                     geometry="primitive:box; width: 10; height: 10; depth: 1"
                     material="shader:gif;src:url(assets/butterfly-fly.gif)"
                     position="60 0 -200"
+                    scale="5 5 5"
+                    rotation="0 -180 0"
                 ></a-entity>
                
                 
