--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               ></img>
               <img
                 id="butterfly-gif"
-                src="https://jmolguin.github.io/assets/butterfly-fly.gif"
+                src="https://jmolguin.github.io/assets/butterfly-teal.gif"
               ></img>
               <a-asset-item
                     id="animated-asset-robot"
