--- a/index.html
+++ b/index.html
@@ -78,8 +78,6 @@
                     src="assets/robot.gltf"
               ></a-asset-item>
             </a-assets>
-        
-
             <a-nft
               emitevents="true"
               type="nft"
@@ -91,7 +89,7 @@
               manejaeventos
             >
                 <a-entity 
-                    geometry="primitive:box; width: 10; height: 10; depth: 1"
+                    geometry="primitive:plane; width: 10; height: 10; depth: 1"
                     material="shader:gif;src:url(assets/butterfly-fly.gif)"
                     position="60 0 -200"
                     scale="5 5 5"
