--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             >
                 <a-entity 
                     geometry="primitive:plane; width: 10; height: 10; depth: 1"
-                    material="shader:gif;src:url(assets/butterfly-fly.gif)"
+                    material="shader:gif;src:url(assets/butterfly-fly.gif);transparent:true"
                     position="60 0 -200"
                     scale="5 5 5"
                     rotation="-90 0 0"
