--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
             id="scene"
             embedded
             gesture-detector
+            transparent="true"
         >
             <a-assets>
               <img
